--- a/src/styles/BookingDownloadSection.module.css
+++ b/src/styles/BookingDownloadSection.module.css
@@ -11,6 +11,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: start;
+    border: none;
   }
   
   /* Styles for 1st container inside bookingDownloadSection */
