--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -93,7 +93,7 @@
   }
   
   /* Responsive Styles */
-  /* @media (max-width: 1024px) {
+  @media (max-width: 1024px) {
     .BrandLogo {
       width: 12.5rem;
       height: 2.8rem;
@@ -116,7 +116,7 @@
   }
   
   @media (max-width: 835px) {
-    header {
+    .header {
       padding-inline: var(--inlinePaddingSmallerDevice);
     }
     .socialMediaIconsGroup {
@@ -182,5 +182,7 @@
       margin-left: auto;
       padding-inline: 1rem;
     }
-  } */
+  } 
+
   
+   
